# Black0ut

./: .gitignore  Architecture.drawio  Overview.drawio  README.md  SatelliteDiagram.drawio  intro.md  setup.md
bony_ui/: .gitignore  zip_build.sh
demo_container/: satellite.py
images/: incoming_message_gif.kra  incoming_message_gif.kra~  obsidian_logo_2.png~
payload_injection/: satellite.py
terrasat/: Cargo.toml  build.sh
terrasat/builds/: cli-config.toml
terrasat/cli-view/: Cargo.toml
terrasat/cli-view/src/: cli.rs  config.rs  config.toml  main.rs
terrasat/model/: Cargo.toml
terrasat/model/src/: lib.rs  satellite.rs
terrasat/server/: Cargo.toml  Rocket.toml  brute_force_solution.py  dummy.py  run.sh
terrasat/server/src/: config.rs  config.toml  main.rs  server.rs
terrasat/src/: cli.rs  config.rs  config.toml  main.rs
terrasat_ui/: .gitignore  zip_build.sh
terrasat_ui/terrasat_ui_BurstDebugInformation_DoNotShip/Data/Plugins/: lib_burst_generated.txt
terrasat_ui/terrasat_ui_Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  boot.config  globalgamemanagers  globalgamemanagers.assets  level0  resources.assets  sharedassets0.assets
terrasat_ui/terrasat_ui_Data/Resources/: unity_builtin_extra
video/: counter_hack_video.osp
