[package]
name = "terrasat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5.9"
colored = "2.0.0"
strum = "0.24.1"
strum_macros = "0.24"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0.64"

model = { path = "../model" }
