[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5.9"
colored = "2.0.0"
strum = "0.24.1"
rocket = "0.5.0-rc.2"
serde_json = "1.0.64"

model = { path = "../model" }